Added Bootstrap to page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css\bootstrap.css">
+    <link rel="stylesheet" href="styles.css">
     <title>ABC Cares Foundation</title>
   </head>
   <body>
@@ -47,5 +49,8 @@
         at cjimenez@abceastflorida.com or call 954-773-8965.</p>
     </div>
    </div>
+   <script type="text/javascript" src="js\bootstrap.js">
+
+   </script>
   </body>
 </html>
