--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         story of an industry professional and/or their family in need. And would you please consider including the ABC Cares Foundation,
         a 100% tax deductible, IRS 501c(3) organization, in your corporate giving program and fundraising efforts (golf tournaments, etc.).
       </p>
-      <button>Click here to donate now.</donate>
+      <button class="btn btn-primary">Click here to donate.</button>
     </div>
-    <div id="contact">
+    <div id="contact" class="siteSection">
       <h2 class="page-heading">Contact Us</h2>
       <p>For more information, please reach out to Chris Jimenez, Director of Foundation Development
         at cjimenez@abceastflorida.com or call 954-773-8965.</p>
