Added in donation members

--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@
       </p>
       <button class="btn btn-primary">Click here to donate.</button>
     </div>
+    <div id="partners" class="siteSection">
+      <h2 class="page-heading">Our Partners</h2>
+      <p>The ABC Cares Foundation has been lucky enough to continue thriving thanks to the generous donations
+        from other people within our industry. It is through these donors that we're able to continue serving 
+        the industry. 
+      </p>
+      <ul>
+        <li>The Moss Foundation</li>
+        <li>The Fischer Foundation</li>
+        <li>Woodland Tilt-Up</li>
+        
+      </ul>
+    </div>
     <div id="contact" class="siteSection">
       <h2 class="page-heading">Contact Us</h2>
       <p>For more information, please reach out to Chris Jimenez, Director of Foundation Development
