Removed dropdown placeholder; added in site section links

--- a/index.html
+++ b/index.html
@@ -19,21 +19,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#donate">Donate Now!<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
+          <li class="nav-item">
+            <a class="nav-link" href="#who-helped">Who We've Helped</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Disabled</a>
@@ -82,15 +74,15 @@
     </div>
     <div id="partners" class="siteSection">
       <h2 class="page-heading">Our Partners</h2>
-      <p>The ABC Cares Foundation has been lucky enough to continue thriving thanks to the generous donations
-        from other people within our industry. It is through these donors that we're able to continue serving 
-        the industry. 
+      <p>The ABC Cares Foundation has been lucky enough to partner with incredible members of our industry.
+        It is through these donors that we're able to continue serving the people's who need it most. 
       </p>
+      <p>Our Partners Include:</p>
       <ul>
-        <li>The Moss Foundation</li>
-        <li>The Fischer Foundation</li>
-        <li>Woodland Tilt-Up</li>
-        
+        <li><a href="https://mosscm.com/about-moss/moss-foundations/">The Moss Foundation</a></li>
+        <li><a href="https://www.woodlandtiltup.com/">The Fischer Foundation on behalf of Woodland Tilt-Up</a></li>
+        <li><a href="https://www.amerisure.com/Home.aspx">Amerisure Insurance</a></li>
+        <li><a href="https://www.bgsagency.com/"> Bateman, Gordon and Sands Insurance</a></li>
       </ul>
     </div>
     <div id="contact" class="siteSection">
