--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#donate">Donate Now!<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#donate"><b> Donate Now!</b><span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
@@ -28,7 +28,7 @@
             <a class="nav-link" href="#who-helped">Who We've Helped</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+              <a class="nav-link" href="#partners">Our Partners</a>
           </li>
         </ul>
       </div>
